lib/html-macro-test/tests/ui/wrong-closing-tag-fails.rs

use html_macro::html;

fn test() {
    html! {
        <a></b>
    };
}

fn main() {}
